After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745629 - Crashes on startup
Crashes on startup
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
unspecified
Other Linux
: Normal blocker
: ---
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on: 743049
Blocks:
 
 
Reported: 2015-03-04 18:07 UTC by Matthias Clasen
Modified: 2015-03-05 09:32 UTC
See Also:
GNOME target: 3.16
GNOME version: ---


Attachments
Add (skip) annotation to gck_object_cache_get_attributes (1.21 KB, patch)
2015-03-05 08:26 UTC, Christophe Fergeau
accepted-commit_now Details | Review

Description Matthias Clasen 2015-03-04 18:07:48 UTC
+++ This bug was initially created as a clone of Bug #743049 +++

Searhorse at 3.14.0-37-ge413d0224f8712c0d52ee74e898b7d1fe9122711, running in Continuous VM crashes on startup.

Traceback:

Thread 4 (Thread 0x7fa750c74700 (LWP 1006))

  • #0 syscall
    at ../sysdeps/unix/sysv/linux/x86_64/syscall.S line 38
  • #1 g_cond_wait_until
    at ../../glib/gthread-posix.c line 1437
  • #2 g_async_queue_pop_intern_unlocked
    at ../../glib/gasyncqueue.c line 422
  • #3 g_async_queue_timeout_pop
    at ../../glib/gasyncqueue.c line 543
  • #4 g_thread_pool_wait_for_new_pool
    at ../../glib/gthreadpool.c line 167
  • #5 g_thread_pool_thread_proxy
    at ../../glib/gthreadpool.c line 364
  • #6 g_thread_proxy
    at ../../glib/gthread.c line 764
  • #7 start_thread
    at pthread_create.c line 313
  • #8 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 109

Thread 3 (Thread 0x7fa751475700 (LWP 1005))

  • #0 syscall
    at ../sysdeps/unix/sysv/linux/x86_64/syscall.S line 38
  • #1 g_cond_wait_until
    at ../../glib/gthread-posix.c line 1437
  • #2 g_async_queue_pop_intern_unlocked
    at ../../glib/gasyncqueue.c line 422
  • #3 g_async_queue_timeout_pop_unlocked
    at ../../glib/gasyncqueue.c line 570
  • #4 g_thread_pool_wait_for_new_task
    at ../../glib/gthreadpool.c line 262
  • #5 g_thread_pool_thread_proxy
    at ../../glib/gthreadpool.c line 296
  • #6 g_thread_proxy
    at ../../glib/gthread.c line 764
  • #7 start_thread
    at pthread_create.c line 313
  • #8 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 109

Thread 1 (Thread 0x7fa75dab5940 (LWP 975))

  • #0 g_datalist_id_dup_data
    at ../../glib/gdataset.c line 846
  • #1 g_object_notify_queue_freeze
    at ../../gobject/gobject.c line 226
  • #2 g_object_set_valist
    at ../../gobject/gobject.c line 2112
  • #3 g_object_set
    at ../../gobject/gobject.c line 2269
  • #4 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #5 object_set_property
    at ../../gobject/gobject.c line 1415
  • #6 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #7 g_object_set
    at ../../gobject/gobject.c line 2269
  • #8 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #9 object_set_property
    at ../../gobject/gobject.c line 1415
  • #10 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #11 g_object_set
    at ../../gobject/gobject.c line 2269
  • #12 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #13 object_set_property
    at ../../gobject/gobject.c line 1415
  • #14 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #15 g_object_set
    at ../../gobject/gobject.c line 2269
  • #16 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #17 object_set_property
    at ../../gobject/gobject.c line 1415
  • #18 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #19 g_object_set
    at ../../gobject/gobject.c line 2269
  • #20 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #21 object_set_property
    at ../../gobject/gobject.c line 1415
  • #22 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #23 g_object_set
    at ../../gobject/gobject.c line 2269
  • #24 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #25 object_set_property
    at ../../gobject/gobject.c line 1415
  • #26 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #27 g_object_set
    at ../../gobject/gobject.c line 2269
  • #28 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #29 object_set_property
    at ../../gobject/gobject.c line 1415
  • #30 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #31 g_object_set
    at ../../gobject/gobject.c line 2269
  • #32 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #33 object_set_property
    at ../../gobject/gobject.c line 1415
  • #34 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #35 g_object_set
    at ../../gobject/gobject.c line 2269
  • #36 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #37 object_set_property
    at ../../gobject/gobject.c line 1415
  • #38 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #39 g_object_set
    at ../../gobject/gobject.c line 2269
  • #40 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #41 object_set_property
    at ../../gobject/gobject.c line 1415
  • #42 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #43 g_object_set
    at ../../gobject/gobject.c line 2269
  • #44 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #45 object_set_property
    at ../../gobject/gobject.c line 1415
  • #46 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #47 g_object_set
    at ../../gobject/gobject.c line 2269
  • #48 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #49 object_set_property
    at ../../gobject/gobject.c line 1415
  • #50 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #51 g_object_set
    at ../../gobject/gobject.c line 2269
  • #52 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #53 object_set_property
    at ../../gobject/gobject.c line 1415
  • #54 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #55 g_object_set
    at ../../gobject/gobject.c line 2269
  • #56 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #57 object_set_property
    at ../../gobject/gobject.c line 1415
  • #58 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #59 g_object_set
    at ../../gobject/gobject.c line 2269
  • #60 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #61 object_set_property
    at ../../gobject/gobject.c line 1415
  • #62 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #63 g_object_set
    at ../../gobject/gobject.c line 2269
  • #64 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #65 object_set_property
    at ../../gobject/gobject.c line 1415
  • #66 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #67 g_object_set
    at ../../gobject/gobject.c line 2269
  • #68 gck_object_cache_set_attributes
    at ../gck/gck-object-cache.c line 119
  • #69 object_set_property
    at ../../gobject/gobject.c line 1415
  • #70 g_object_set_valist
    at ../../gobject/gobject.c line 2159
  • #71 g_object_set
    at ../../gobject/gobject.c line 2269

etc. etc., gdb showed it was 500+ frames
Comment 1 Matthias Clasen 2015-03-04 18:08:33 UTC
cloning this bug back to seahorse. There is a recommendation in the cloned bug to add an annotation in gcr to fix this in the short term
Comment 2 Christophe Fergeau 2015-03-05 08:26:13 UTC
Created attachment 298608 [details] [review]
Add (skip) annotation to gck_object_cache_get_attributes
Comment 3 Stef Walter 2015-03-05 09:16:32 UTC
Review of attachment 298608 [details] [review]:

Looks good to me.
Comment 4 Christophe Fergeau 2015-03-05 09:32:06 UTC
Thanks, pushed as commit 05ab60fb8. Marking as fixed even tough we should revert this commit once vala is doing the right thing.